--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Custom Font  -->
 	<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet'>
-
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<!-- Title --> 
 	<title>WR Gallery</title>
 	
