--- a/html/header.html
+++ b/html/header.html
@@ -4,8 +4,8 @@
 
 		<!-- logo -->
 		<div class="site-logo nav nav-link pull-left">
-			<div class="site-logo-text">WR Works</div>
-			<!-- <div class="site-logo-img"></div> -->
+			<!-- <div class="site-logo-text">WR Works</div> -->
+			<div class="site-logo-img"></div>
 		</div><!-- end of site-sitelogo -->
 
 		<!-- mobile menu -->
