--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<!-- logo -->
 			<div class="site-logo nav nav-link pull-left">
 				<div class="site-logo-text">WR Gallery</div>
-				<!-- <div class="site-logo-img"></div> -->
+				<div class="site-logo-img"></div>
 			</div><!-- end of site-sitelogo -->
 
 			<!-- mobile menu -->
