--- a/html/header.html
+++ b/html/header.html
@@ -4,21 +4,23 @@
 
 		<!-- logo -->
 		<div class="site-logo nav nav-link pull-left">
-			<!-- <div class="site-logo-text">WR Works</div> -->
-			<!-- <div class="site-logo-img"></div> -->
-		</div><!-- end of site-sitelogo -->
+			<div class="site-logo-text">WR Gallery</div>
+			<div class="site-logo-img"></div>
+		</div>
+		<!-- end of site-sitelogo -->
 
 		<!-- mobile menu -->
 		<div class="site-menu-toggle">
 			<nav class="nav">
 				<a href="#" class="nav-link">&#9776;</a>
 			</nav>
-		</div><!-- end of site-menu-toggle -->
+		</div>
+		<!-- end of site-menu-toggle -->
 		
 		<!-- main menu -->
 		<div class="site-menu">
 
-			<nav class="nav">
+			<!-- <nav class="nav">
 				<div class="dropdown nav-link">
 					<button class="btn dropdown-toggle" type="button" data-toggle="dropdown">Web<span class="caret"></span></button>
 		  			<ul class="dropdown-menu">
@@ -29,9 +31,12 @@
 				<a href="#" class="nav-link">App</a>
 				<a href="#" class="nav-link">Expo</a>
 				<a href="https://medium.com/@sengallery" class="nav-link" target="_blank">Blog</a>
-			</nav>
+			</nav> -->
 
-		</div><!-- end of site-menu -->
+		</div>
+		<!-- end of site-menu -->
 			
-	</div><!-- end of container -->
-</div><!-- end of site-header -->
+	</div>
+	<!-- end of container -->
+</div>
+<!-- end of site-header -->
