--- a/html/header.html
+++ b/html/header.html
@@ -11,14 +11,16 @@
 
 		<!-- mobile menu -->
 		<div class="site-menu-toggle">
-			<nav class="nav">
-				<a href="#" class="nav-link">&#9776;</a>
-			</nav>
+			<!-- trigram / triple bar -->
+			<!-- <a href="#" class="nav-link">&#9776;</a> -->
+			<!-- <a href="#" id='toggle2'>&#x2715;</a> -->
+			<a href="#" id='toggle2'>&#9776;</a>
+			<!-- <a href="#menu" id="toggle"><span></span></a> -->
 		</div>
 		<!-- end of site-menu-toggle -->
 		
 		<!-- main menu -->
-		<div class="site-menu">
+		<div class="site-menu" >
 
 			<!-- <nav class="nav">
 				<div class="dropdown nav-link">
