--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,4 @@
 <div class="site-header site-header-bg">
-	
 	<div class="container">
 
 		<!-- logo -->
@@ -7,38 +6,12 @@
 			<div class="site-logo-text">WR Gallery</div>
 			<div class="site-logo-img"></div>
 		</div>
-		<!-- end of site-sitelogo -->
 
-		<!-- mobile menu -->
-		<div class="site-menu-toggle">
-			<!-- trigram / triple bar -->
-			<!-- <a href="#" class="nav-link">&#9776;</a> -->
-			<!-- <a href="#" id='toggle2'>&#x2715;</a> -->
-			<a href="#" id='toggle2'>&#9776;</a>
-			<!-- <a href="#menu" id="toggle"><span></span></a> -->
-		</div>
-		<!-- end of site-menu-toggle -->
-		
 		<!-- main menu -->
-		<div class="site-menu" >
+		<div class="site-menu" ></div>
 
-			<!-- <nav class="nav">
-				<div class="dropdown nav-link">
-					<button class="btn dropdown-toggle" type="button" data-toggle="dropdown">Web<span class="caret"></span></button>
-		  			<ul class="dropdown-menu">
-		    			<li><a href="#">喔熊列車圓夢計畫</a></li>
-		    			<li><a href="#">卡米爾VR簡報 </a></li>
-		  			</ul>
-				</div> 
-				<a href="#" class="nav-link">App</a>
-				<a href="#" class="nav-link">Expo</a>
-				<a href="https://medium.com/@sengallery" class="nav-link" target="_blank">Blog</a>
-			</nav> -->
-
-		</div>
-		<!-- end of site-menu -->
+		<!-- mobile menu (☰ to X)-->
+		<div class="site-menu-toggle toggle-button"></div>
 			
 	</div>
-	<!-- end of container -->
 </div>
-<!-- end of site-header -->
