--- a/html/header.html
+++ b/html/header.html
@@ -10,8 +10,21 @@
 		<!-- main menu -->
 		<div class="site-menu" ></div>
 
-		<!-- mobile menu (☰ to X)-->
-		<div class="site-menu-toggle toggle-button"></div>
-			
+		<!-- mobile menu - button (☰ to X) -->			
+		<div class="site-menu-toggle">
+			<div class="site-menu-toggle-button toggle-switch"></div>
+		</div>
+		
+	</div>
+</div>
+<!-- ==================================================================== -->
+<div class="site-header-expand">
+	<div class="container">
+
+		<!-- mobile menu - content -->			
+		<div class="site-menu-toggle">
+			<div class="site-menu-toggle-content"></div>
+		</div>
+
 	</div>
 </div>
