--- a/html/footer.html
+++ b/html/footer.html
@@ -1,7 +1,5 @@
 <div class="site-footer site-footer-bg">
 	<div class="container">
-		<!-- <span class="pull-left"><a href="#"><b>EN</b></a> | <a href="#"><b>CH</b></a></span> -->
-		<span> © 2014-2018 | Email <a href="mailto:sengallery@gmail.com"><b>WR Studio</b></a>.</span>
-		<!-- <span class="pull-right"> © 2014-2018 | Email <a href="mailto:sengallery@gmail.com"><b>WR Studio</b></a>.</span> -->
+		<span> © 2014-2018 | Email <a href="mailto:sengallery@gmail.com"><b>WRstudio</b></a>.</span>
 	</div>
 </div>	
