--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="css/style.css"><!-- Custom CSS -->
 	<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	
 	<!-- Required Before Loading JS -->
     <script src="https://code.jquery.com/jquery.js"></script><!-- jQuery JS -->
